--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShopOnline</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0021facf9c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -85,6 +90,122 @@
             </div>
         </section>
     </div>
+    <section class="cards_sec">
+        <div class="container">
+            <h3 class="fetured">Fetured Items</h3>
+            <p class="feturedShop">Shop for items based on what we featured in this week</p>
+            <div class="card-flex">
+                <div class="card">
+                    <a class="card-link" href="">
+                        <img class="card-pic" src="img/product-1.png" alt="blue jacket">
+                        <div class="text-box">
+                            <p class="card-name">ELLERY X M'O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add-box">
+                        <a class="add" href="">
+                            <img src="img/add.svg" alt="add">
+                            <p class="add-txt">Add to Cart</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <a class="card-link" href="">
+                        <img class="card-pic" src="img/product-2.png" alt="blue jacket">
+                        <div class="text-box">
+                            <p class="card-name">ELLERY X M'O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add-box">
+                        <a class="add" href="">
+                            <img src="img/add.svg" alt="add">
+                            <p class="add-txt">Add to Cart</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <a class="card-link" href="">
+                        <img class="card-pic" src="img/product-3.png" alt="blue jacket">
+                        <div class="text-box">
+                            <p class="card-name">ELLERY X M'O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add-box">
+                        <a class="add" href="">
+                            <img src="img/add.svg" alt="add">
+                            <p class="add-txt">Add to Cart</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <a class="card-link" href="">
+                        <img class="card-pic" src="img/product-4.png" alt="blue jacket">
+                        <div class="text-box">
+                            <p class="card-name">ELLERY X M'O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add-box">
+                        <a class="add" href="">
+                            <img src="img/add.svg" alt="add">
+                            <p class="add-txt">Add to Cart</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <a class="card-link" href="">
+                        <img class="card-pic" src="img/product-5.png" alt="blue jacket">
+                        <div class="text-box">
+                            <p class="card-name">ELLERY X M'O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add-box">
+                        <a class="add" href="">
+                            <img src="img/add.svg" alt="add">
+                            <p class="add-txt">Add to Cart</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <a class="card-link" href="">
+                        <img class="card-pic" src="img/product-6.png" alt="blue jacket">
+                        <div class="text-box">
+                            <p class="card-name">ELLERY X M'O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add-box">
+                        <a class="add" href="">
+                            <img src="img/add.svg" alt="add">
+                            <p class="add-txt">Add to Cart</p>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="browse_all-box">
+                <a class="browse_all" href="">
+                    <p class="browse_all-txt">Browse All Product</p>
+                </a>
+            </div>
+        </div>
+    </section>
     <div class="info">
         <div class="info container">
             <div class="info_container">
@@ -141,6 +262,12 @@
         <div class="footer_bottom">
             <div class="footer_bottom container">
                 <p class="rights">© 2021 Brand All Rights Reserved.</p>
+                <div class="icons">
+                    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-pinterest-p"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                </div>
             </div>
         </div>
     </div>
