--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         <div class="subscribe"><span class="subscribe_bolt">SUBSCRIBE</span> <br>
                             FOR OUR NEWLETTER AND PROMOTION</div>
                         <div><input type="email" placeholder="Enter Your Email" class="email"><button
-                                class="button">Subscribe</button>
+                                class="footer_button">Subscribe</button>
                         </div>
                     </div>
                 </div>
