--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShopOnline</title>
+    <title>ShopCatalog</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300&display=swap"
@@ -28,27 +28,27 @@
                         <div class="mega-item">
                             <h3 class="mega-heading">Menu</h3>
                             <h3 class="fashionMan">Man</h3>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Bags</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Denim</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
+                            <a class="mega-link" href="#">Accessories</a>
+                            <a class="mega-link" href="#">Bags</a>
+                            <a class="mega-link" href="#">Denim</a>
+                            <a class="mega-link" href="#">T-Shirts</a>
                         </div>
                         <div class="mega-item">
                             <h3 class="fashionMan">WOMAN</h3>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Polos</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
+                            <a class="mega-link" href="#">Accessories</a>
+                            <a class="mega-link" href="#">Jackets & Coats</a>
+                            <a class="mega-link" href="#">Polos</a>
+                            <a class="mega-link" href="#">T-Shirts</a>
+                            <a class="mega-link" href="#">Shirts</a>
                         </div>
                         <div class="mega-item">
                             <h3 class="fashionMan">KIDS</h3>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Denim</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Bags</a>
+                            <a class="mega-link" href="#">Accessories</a>
+                            <a class="mega-link" href="#">Jackets & Coats</a>
+                            <a class="mega-link" href="#">Denim</a>
+                            <a class="mega-link" href="#">T-Shirts</a>
+                            <a class="mega-link" href="#">Shirts</a>
+                            <a class="mega-link" href="#">Bags</a>
                         </div>
                     </div>
                 </li>
@@ -57,43 +57,117 @@
             </ul>
         </nav>
     </header>
-    <div class="banner">
+    <div class="under_header">
         <div class="container">
-            <div class="top_banner">
-                <div class="bannerMan"><img src="img/man.png" alt="man"></div>
-                <div class="bannerheading">
-                    <p class="bannerTextTop">THE BRAND</p>
-                    <p class="bannerTextBottom">OF LUXERIOUS <span class="fashion">FASHION</span></p>
-                </div>
+            <div class="new_arrivals">
+                <p class="p_under_header">NEW ARRIVALS </p>
+                <nav class="bread_crumb">
+                    <a class="crumb" href="index.html">HOME</a> /
+                    <a class="crumb" href="">MEN</a> /
+                    <a class="new_crumb" href="">NEW ARRIVALS</a>
+                </nav>
             </div>
         </div>
     </div>
-    <div class="content">
-        <section class="content container">
-            <div class="forPeople">
-                <div class="forWomen">
-                    <img src="img/forWomen.png" alt="forWomen">
-                    <p class="textMen">30% OFF <br> <span class="fashion">FOR WOMEN</span></p>
-                </div>
-                <div class="forMen">
-                    <img src="img/forMen.png" alt="forMen" style="width: 100%;">
-                    <p class="textMen">HOT DEAL <br> <span class="fashion">FOR MEN</span></p>
-                </div>
-                <div class="forKids">
-                    <img src="img/forKids.png" alt="forKids">
-                    <p class="textMen newArrivals">NEW ARRIVALS<br><span class="fashion">FOR KIDS</span></p>
-                </div>
+    <div class="container">
+        <div class="filter_select">
+            <div class="filter">
+                <details class="filter_box">
+                    <summary class="sumfil">
+                        <div class="fil_box">
+                            <p class="open_fil">FILTER</p><i class="fa-solid fa-bars-staggered"></i>
+                        </div>
+                    </summary>
+                    <div class="summary_box">
+                        <details class="open_category">
+                            <summary class="sumfil">
+                                <div class="leftitem_category">
+                                    <p class="text_category">CATEGORY</p>
+                                </div>
+                            </summary>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Bags</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Denim</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Hoodies & Sweatshirts</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Polos</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Shoes</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Sweaters & Knits</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Tanks</a>
+                        </details>
+                        <details class="open_category">
+                            <summary class="sumfil">
+                                <div class="leftitem_category">
+                                    <p class="text_category">BRAND</p>
+                                </div>
+                            </summary>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Adidas</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Nike</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Puma</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Joma</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Abibas</a>
+                        </details>
+                        <details class="open_category">
+                            <summary class="sumfil">
+                                <div class="leftitem_category">
+                                    <p class="text_category">DESIGNER</p>
+                                </div>
+                            </summary>
+                            <a class="mega-link" href="Catalog.html" target="_blank">
+                                Pierre Cardin</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Elle Saab</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Versace</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Yudashkin</a>
+                        </details>
+                    </div>
+                </details>
             </div>
-            <div class="accesories">
-                <img src="img/accesories.png" alt="accesories">
-                <p class="textMen textAccesories">LUXERIOUS & TRENDY <br> <span class="fashion">ACCESORIES</span></p>
+            <div class="selector">
+                <details class="open_trend">
+                    <summary class="sumsel">
+                        <div class="trend_flex">
+                            <p class="text_trend">TRENDING NOW</p><i class="fa-solid fa-angle-down"></i>
+                        </div>
+                    </summary>
+                    <div class="open_check">
+                        <label class="check"><input type="checkbox">&nbsp Orange</label>
+                        <label class="check"><input type="checkbox">&nbsp Green</label>
+                        <label class="check"><input type="checkbox">&nbsp Blue</label>
+                    </div>
+                </details>
+                <details class="open_size">
+                    <summary class="sumsel">
+                        <div class="size_flex">
+                            <p class="text_trend">SIZE</p><i class="fa-solid fa-angle-down"></i>
+                        </div>
+                    </summary>
+                    <div class="open_size_check">
+                        <label class="check"><input type="checkbox">&nbsp XS</label>
+                        <label class="check"><input type="checkbox">&nbsp S</label>
+                        <label class="check"><input type="checkbox">&nbsp M</label>
+                        <label class="check"><input type="checkbox">&nbsp L</label>
+                    </div>
+                </details>
+                <details class="open_price">
+                    <summary class="sumsel">
+                        <div class="price_flex">
+                            <p class="text_trend">PRICE</p><i class="fa-solid fa-angle-down"></i>
+                        </div>
+                    </summary>
+                    <div class="open_price_check">
+                        <label class="check"><input type="checkbox">&nbsp 100$</label>
+                        <label class="check"><input type="checkbox">&nbsp 500$</label>
+                        <label class="check"><input type="checkbox">&nbsp 1000$</label>
+                    </div>
+                </details>
             </div>
-        </section>
+        </div>
+    </div>
     </div>
     <section class="cards_sec">
         <div class="container">
-            <h3 class="fetured">Fetured Items</h3>
-            <p class="feturedShop">Shop for items based on what we featured in this week</p>
             <div class="card-flex">
                 <div class="card">
                     <a class="card-link" href="">
@@ -114,7 +188,7 @@
                 </div>
                 <div class="card">
                     <a class="card-link" href="">
-                        <img class="card-pic" src="img/product-2.png" alt="blue jacket">
+                        <img class="card-pic" src="img/product-7.jpg" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
                             <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
@@ -165,7 +239,7 @@
                 </div>
                 <div class="card">
                     <a class="card-link" href="">
-                        <img class="card-pic" src="img/product-5.png" alt="blue jacket">
+                        <img class="card-pic" src="img/product-8.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
                             <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
@@ -182,7 +256,7 @@
                 </div>
                 <div class="card">
                     <a class="card-link" href="">
-                        <img class="card-pic" src="img/product-6.png" alt="blue jacket">
+                        <img class="card-pic" src="img/product-9.jpg" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
                             <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
@@ -197,12 +271,57 @@
                         </a>
                     </div>
                 </div>
-
-            </div>
-            <div class="browse_all-box">
-                <a class="browse_all" href="">
-                    <p class="browse_all-txt">Browse All Product</p>
-                </a>
+                <div class="card">
+                    <a class="card-link" href="">
+                        <img class="card-pic" src="img/product-10.jpg" alt="blue jacket">
+                        <div class="text-box">
+                            <p class="card-name">ELLERY X M'O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add-box">
+                        <a class="add" href="">
+                            <img src="img/add.svg" alt="add">
+                            <p class="add-txt">Add to Cart</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <a class="card-link" href="">
+                        <img class="card-pic" src="img/product-11.jpg" alt="blue jacket">
+                        <div class="text-box">
+                            <p class="card-name">ELLERY X M'O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add-box">
+                        <a class="add" href="">
+                            <img src="img/add.svg" alt="add">
+                            <p class="add-txt">Add to Cart</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <a class="card-link" href="">
+                        <img class="card-pic" src="img/product-12.jpg" alt="blue jacket">
+                        <div class="text-box">
+                            <p class="card-name">ELLERY X M'O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add-box">
+                        <a class="add" href="">
+                            <img src="img/add.svg" alt="add">
+                            <p class="add-txt">Add to Cart</p>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
