--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
         <nav class="menu_header container">
             <ul class="iconleft">
                 <li class="logo"><a href="index.html"><img src="img/logo.svg" alt="logo"></a></li>
-                <li class="loop"><a href="index.html"><img src="img/loop.svg" alt="loop"></a></li>
+                <li class="loop"><a href="product.html" target="_blank"><img src="img/loop.svg" alt="loop"></a></li>
             </ul>
             <ul class="iconright">
                 <li class="burger"><a href="index.html"><img src="img/menu.svg" alt="menu"></a>
