--- a/product.html
+++ b/product.html
@@ -53,7 +53,7 @@
                     </div>
                 </li>
                 <li class="personal"><a href="index.html"><img src="img/contact.svg" alt="contact"></a></li>
-                <li class="basket"><a href="index.html"><img src="img/basket.svg" alt="basket"></a></li>
+                <li class="basket"><a href="cart.html" target="_blank"><img src="img/basket.svg" alt="basket"></a></li>
             </ul>
         </nav>
     </header>
